--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   url_launcher: ^5.0.3
   shared_preferences: ^0.5.3+1
   share: ^0.6.1+1
+  flutter_localizations: 
+    sdk: flutter
   
 
   # The following adds the Cupertino Icons font to your application.
@@ -34,6 +36,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  intl_translation: ^0.17.1
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -70,6 +74,11 @@ flutter:
          - asset: fonts/ZillaSlab-Italic.ttf
            style: italic
          - asset: fonts/ZillaSlab-Bold.ttf
+           weight: 700
+     - family: Tajawal
+       fonts:
+         - asset: fonts/Tajawal-Regular.ttf
+         - asset: fonts/Tajawal-Bold.ttf
            weight: 700
   #   - family: Trajan Pro
   #     fonts:
